# Document-AI

./: . dockerignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  README.md  app.py  constants.py  docker-compose.user.yml  docker-compose.yml  index.py  models.py  pyproject.toml
.github/workflows/: build-and-push.yml
ai_service/: add_documents.py  env  main.py  query_llm.py
ai_service/document_conversion/: convert_documents.py  document_splitter.py
ai_service/embedding/: alibaba.py  embeddings.py
ai_service/llm/: model.py
ai_service/utils/: constants.py  existence_check.py  load_file.py  query.py
ai_service/utils/query/: index.py
paperless_ingestion/: PaperlessIngestion.py
scripts/: download_model.py
services/ai_service/: add_documents.py  main.py  query_llm.py
services/ai_service/document_conversion/: convert_documents.py  document_splitter.py
services/ai_service/embedding/: embeddings.py
services/db_service/: main.py
services/paperless_ingestion/: PaperlessIngestion.py
services/security_service/: main.py
vector-db-client/: Dockerfile  add_documents.py  index.py  main.py  pyproject.toml  query_llm.py
vector-db-client/document_conversion/: convert_documents.py  docling_pdf_loader.py  document_splitter.py  main.py
vector-db-client/embedding/: alibaba.py  embeddings.py
vector-db-client/embedding_function/: multilingual_e5_large_instruct_function.py
vector-db-client/llm/: main.py  model.py
vector-db-client/utils/: thinking_animation.py
vector-db-server/: docker-compose.yml
(+5 files in other folders)
