[project]
name = "document-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "docling>=2.41.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-qwq>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "pre-commit>=4.2.0",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
build = [
  # build‑time only – compiled with CUDA
  "llama-cpp-python",
]
