[project]
name = "vector-db-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "docling>=2.41.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-qwq>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "sentence-transformers>=5.0.0",
]
